Stable Android library features (added log feature to sample app, added sample manifest xml)